test/official_tests/print/missing_argument.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
print;
